--- a/forge_manifest.json
+++ b/forge_manifest.json
@@ -4,9 +4,9 @@
   "description": "Design, build and playtest card games on the go",
   "start_url": "./forge.html",
   "display": "standalone",
-  "orientation": "portrait",
-  "background_color": "#0d0d0f",
-  "theme_color": "#0d0d0f",
+  "orientation": "any",
+  "background_color": "#0d0f14",
+  "theme_color": "#0d0f14",
   "icons": [
     { "src": "icon-192.png", "sizes": "192x192", "type": "image/png", "purpose": "any maskable" },
     { "src": "icon-512.png", "sizes": "512x512", "type": "image/png", "purpose": "any maskable" }
